--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
+gunicorn==20.1.0
 pycodestyle==2.8.0
 PyJWT==2.4.0
 pytz==2022.1
