--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ autopep8==1.6.0
 Django==4.0.6
 django-cors-headers==3.13.0
 django-filter==22.1
+django-shortuuidfield==0.1.3
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 gunicorn==20.1.0
 pycodestyle==2.8.0
 PyJWT==2.4.0
 pytz==2022.1
+shortuuid==1.0.9
+six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 tzdata==2022.1
